client/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
